--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ FaceRec/FaceRec/Faces_Temp/FR.txt
 FaceRec/DBFace/
 FaceRec/FaceRec/Faces_Temp/app_pid.txt
 FaceRec/FaceRec/Faces_Temp/atomic_pid.txt
+TaskScanner/Failed/
+Tasks/
