--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-
-*.mp4
-*.jpg
-*.pkl
-*.png
-*.avi
-*.h5
-TensorBoard/train/
-TensorBoard/validation/
-__pycache__/
-logs/
+.idea/
 Models/
+venv/
 Samples/
-Backup/
-.vs/
-FaceRec/FaceRec/Faces_Temp/
-FaceRec/DBFace/atomic_pid.txt
-FaceRec/DBFace/model/
-FaceRec/DBFace/prj_ncnn/model/
+P_Temp/
